--- a/Homework05.ipynb
+++ b/Homework05.ipynb
@@ -1005,21 +1005,426 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "tags": [
      "work_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        567486224.0\n",
+       "1         76548890.0\n",
+       "2            59018.0\n",
+       "3            14074.0\n",
+       "4            18666.0\n",
+       "            ...     \n",
+       "42953            1.0\n",
+       "42954            1.0\n",
+       "42994            1.0\n",
+       "42995            1.0\n",
+       "42999            1.0\n",
+       "Length: 31536, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0         True\n",
+       "1         True\n",
+       "2         True\n",
+       "3         True\n",
+       "4         True\n",
+       "         ...  \n",
+       "42953    False\n",
+       "42954    False\n",
+       "42994    False\n",
+       "42995    False\n",
+       "42999    False\n",
+       "Length: 31536, dtype: bool"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>42948</th>\n",
+       "      <th>42949</th>\n",
+       "      <th>42950</th>\n",
+       "      <th>42951</th>\n",
+       "      <th>42952</th>\n",
+       "      <th>42953</th>\n",
+       "      <th>42954</th>\n",
+       "      <th>42994</th>\n",
+       "      <th>42995</th>\n",
+       "      <th>42999</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2209.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10442599.0</td>\n",
+       "      <td>1261512.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>153391.0</td>\n",
+       "      <td>24877.0</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>76499275.0</td>\n",
+       "      <td>11668549.0</td>\n",
+       "      <td>3906.0</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>394.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>234.0</td>\n",
+       "      <td>2760.0</td>\n",
+       "      <td>3923.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14136394.0</td>\n",
+       "      <td>1554687.0</td>\n",
+       "      <td>352.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>1933.0</td>\n",
+       "      <td>1559.0</td>\n",
+       "      <td>1288.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>14259369.0</td>\n",
+       "      <td>1647369.0</td>\n",
+       "      <td>419.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>737.0</td>\n",
+       "      <td>1993.0</td>\n",
+       "      <td>2045.0</td>\n",
+       "      <td>1411.0</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>670788.0</td>\n",
+       "      <td>118085.0</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>82316585.0</td>\n",
+       "      <td>10953710.0</td>\n",
+       "      <td>3289.0</td>\n",
+       "      <td>1423.0</td>\n",
+       "      <td>389.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>3726.0</td>\n",
+       "      <td>6086.0</td>\n",
+       "      <td>398.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>4055.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>20865067.0</td>\n",
+       "      <td>2362673.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>870.0</td>\n",
+       "      <td>2574.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>231.0</td>\n",
+       "      <td>3068.0</td>\n",
+       "      <td>5525.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>79 rows × 31536 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         0           1       2       3       4      5       6       7      \\\n",
+       "0       2209.0       172.0    39.0     2.0     0.0    1.0    14.0    29.0   \n",
+       "1   10442599.0   1261512.0    24.0    30.0    40.0   50.0   122.0    78.0   \n",
+       "2     153391.0     24877.0   241.0    42.0    66.0   80.0    99.0    84.0   \n",
+       "3   76499275.0  11668549.0  3906.0   107.0   394.0   32.0   234.0  2760.0   \n",
+       "4   14136394.0   1554687.0   352.0    10.0    67.0  550.0  1933.0  1559.0   \n",
+       "..         ...         ...     ...     ...     ...    ...     ...     ...   \n",
+       "74  14259369.0   1647369.0   419.0     8.0    77.0  737.0  1993.0  2045.0   \n",
+       "75    670788.0    118085.0   260.0     0.0    36.0   24.0     2.0    29.0   \n",
+       "76  82316585.0  10953710.0  3289.0  1423.0   389.0   12.0    31.0  3726.0   \n",
+       "77      4055.0       496.0     0.0     0.0     0.0    0.0     0.0     0.0   \n",
+       "78  20865067.0   2362673.0   122.0   870.0  2574.0   84.0   231.0  3068.0   \n",
+       "\n",
+       "     8      9      ...  42948  42949  42950  42951  42952  42953  42954  \\\n",
+       "0    147.0   28.0  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "1    117.0   62.0  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "2     72.0   47.0  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "3   3923.0   38.0  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "4   1288.0  164.0  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "..     ...    ...  ...    ...    ...    ...    ...    ...    ...    ...   \n",
+       "74  1411.0  178.0  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "75     9.0   10.0  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "76  6086.0  398.0  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "77     0.0    0.0  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "78  5525.0  125.0  ...    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "\n",
+       "    42994  42995  42999  \n",
+       "0     0.0    0.0    0.0  \n",
+       "1     0.0    0.0    0.0  \n",
+       "2     0.0    0.0    0.0  \n",
+       "3     0.0    0.0    0.0  \n",
+       "4     0.0    0.0    0.0  \n",
+       "..    ...    ...    ...  \n",
+       "74    0.0    0.0    0.0  \n",
+       "75    0.0    0.0    0.0  \n",
+       "76    0.0    0.0    0.0  \n",
+       "77    0.0    0.0    0.0  \n",
+       "78    0.0    0.0    0.0  \n",
+       "\n",
+       "[79 rows x 31536 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# sum of all columns\n",
     "display(features_df.sum())\n",
     "\n",
     "# columns where the sum is more than 100\n",
     "display((features_df.sum() > 100))\n",
+    "col_mask = features_df.sum() > 0\n",
     "\n",
-    "# TODO: remove columns with no information"
+    "# TODO: remove columns with no information\n",
+    "features_df = features_df.loc[:,col_mask]\n",
+    "features_df"
    ]
   },
   {
@@ -1037,9 +1442,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training accuracy: {'clarinet': 0.6, 'guitar': 1.0, 'piano': 0.0, 'overall': 0.53333}\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the classifier and report training accuracy\n",
     "AwesomeAudioClassifier.fit(features_df, labels)"
