--- a/Homework05.ipynb
+++ b/Homework05.ipynb
@@ -2518,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {
     "tags": [
      "work_cell"
@@ -2928,7 +2928,7 @@
        "[127 rows x 18225 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2939,6 +2939,7 @@
     "for img in imgs_resized:\n",
     "  resized_features.append(get_pixels(img))\n",
     "\n",
+    "resized_features_df = pd.DataFrame(resized_features)\n",
     "\n",
     "grayscale_features = []\n",
     "\n",
@@ -2973,12 +2974,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training accuracy: {'florist': 0.95122, 'forest': 1.0, 'tree': 0.86364, 'overall': 0.93829}\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the classifier and report training accuracy\n",
-    "AwesomeImageClassifier.fit(features_df, labels)"
+    "AwesomeImageClassifier.fit(grayscale_df, labels)"
    ]
   },
   {
@@ -2992,15 +3001,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "tags": [
      "work_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training accuracy: {'florist': 0.95122, 'forest': 1.0, 'tree': 0.86364, 'overall': 0.93829}\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: create scaler object, scale data and re-run classification"
+    "# TODO: create scaler object, scale data and re-run classification\n",
+    "std_scaler = StandardScaler().set_output(transform=\"pandas\")\n",
+    "gray_scaled_df = std_scaler.fit_transform(grayscale_df)\n",
+    "gray_scaled_df\n",
+    "\n",
+    "AwesomeImageClassifier.fit(gray_scaled_df, labels)\n"
    ]
   },
   {
@@ -3023,7 +3045,9 @@
    },
    "source": [
     "<span style=\"color:hotpink;\">\n",
-    "EDIT THIS CELL WITH ANSWER\n",
+    "Different scaling strategies didn't influence the prediction results. \n",
+    "Is it because grayscale has done scaling already and further scaling didn't affect anything further? \n",
+    "I tried to scale the resized images but it didn't work, so I thought grayscale is necessary for image classification but not very sure.\n",
     "</span>"
    ]
   },
